--- a/index.html
+++ b/index.html
@@ -11,7 +11,12 @@
     <main>
       <article class="calculator">
         <header class="output">
-          <div class="scheme-selector">Light mode</div>
+          <div class="scheme-selector">
+            <label class="toggle_label">
+              <input type="checkbox" id="mode" class="toggle" />
+              <span class="slider"> </span>
+            </label>
+          </div>
           <div data-previous-operand class="previous-operand"></div>
           <div data-current-operand class="current-operand"></div>
         </header>
